add scene : graph_practice - Collection 03 Scene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -444,6 +444,9 @@
     <ClCompile Include="..\Classes\graph_practice_Collection02Scene.cpp">
       <Filter>src\scene\graph_practice</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\graph_practice_Collection03Scene.cpp">
+      <Filter>src\scene\graph_practice</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -792,6 +795,9 @@
       <Filter>src\scene\graph_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\graph_practice_Collection02Scene.h">
+      <Filter>src\scene\graph_practice</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\graph_practice_Collection03Scene.h">
       <Filter>src\scene\graph_practice</Filter>
     </ClInclude>
   </ItemGroup>
