--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -160,6 +160,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\graph_practice_Collection06Scene.cpp" />
     <ClCompile Include="..\Classes\graph_practice_GraphViewNode.cpp" />
     <ClCompile Include="..\Classes\graph_practice_RootScene.cpp" />
+    <ClCompile Include="..\Classes\input_practice_RootScene.cpp" />
     <ClCompile Include="..\Classes\shader_practice_BasicScene.cpp" />
     <ClCompile Include="..\Classes\shader_practice_GLUniformInfos.cpp" />
     <ClCompile Include="..\Classes\shader_practice_GLUniformInfosScene.cpp" />
@@ -276,6 +277,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\graph_practice_RootScene.h" />
     <ClInclude Include="..\Classes\helper_BackToThePreviousScene.h" />
     <ClInclude Include="..\Classes\helper_SceneMover.h" />
+    <ClInclude Include="..\Classes\input_practice_RootScene.h" />
     <ClInclude Include="..\Classes\shader_practice_BasicScene.h" />
     <ClInclude Include="..\Classes\shader_practice_GLUniformInfos.h" />
     <ClInclude Include="..\Classes\shader_practice_GLUniformInfosScene.h" />
