--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -183,9 +183,6 @@
     <ClCompile Include="..\Classes\Research_Input_KeyConfigScene.cpp">
       <Filter>src\scene\step99</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Research_Input_GamePadTest.cpp">
-      <Filter>src\scene</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\step02_input_KeyCodeCollectScene.cpp">
       <Filter>src\scene\step_05_rain_of_chaos\input</Filter>
     </ClCompile>
@@ -462,6 +459,9 @@
     <ClCompile Include="..\Classes\input_practice_RootScene.cpp">
       <Filter>src\scene\input_practice</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\input_practice_GamePadTestScene.cpp">
+      <Filter>src\scene\input_practice</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -523,9 +523,6 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Research_Input_KeyConfigScene.h">
       <Filter>src\scene\step99</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Research_Input_GamePadTest.h">
-      <Filter>src\scene</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\CPG_Input_KeyCodeContainer.h">
       <Filter>src\input</Filter>
@@ -825,6 +822,9 @@
       <Filter>src\scene\graph_practice</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\input_practice_RootScene.h">
+      <Filter>src\scene\input_practice</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\input_practice_GamePadTestScene.h">
       <Filter>src\scene\input_practice</Filter>
     </ClInclude>
   </ItemGroup>
