--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -222,6 +222,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_typetype_game_StageTestScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_StageView.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_TitleScene.cpp" />
+    <ClCompile Include="..\Classes\step_typetype_ScheduleScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_sound_Basic.cpp" />
     <ClCompile Include="..\Classes\step_pathfinder_tool_TerrainViewer.cpp" />
     <ClCompile Include="..\Classes\step_pathfinder_textField_BasicScene.cpp" />
@@ -345,6 +346,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_typetype_game_StageTestScene.h" />
     <ClInclude Include="..\Classes\step_typetype_game_StageView.h" />
     <ClInclude Include="..\Classes\step_typetype_game_TitleScene.h" />
+    <ClInclude Include="..\Classes\step_typetype_ScheduleScene.h" />
     <ClInclude Include="..\Classes\step_typetype_sound_Basic.h" />
     <ClInclude Include="..\Classes\step_pathfinder_tool_TerrainViewer.h" />
     <ClInclude Include="..\Classes\step_pathfinder_textField_BasicScene.h" />
