--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -171,6 +171,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_clickclick_game_Block.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_BlockTestScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_BlockView.cpp" />
+    <ClCompile Include="..\Classes\step_clickclick_game_Processor.cpp" />
     <ClCompile Include="..\Classes\step_mole_AnimationComponent.cpp" />
     <ClCompile Include="..\Classes\cpg_Animation_Index.cpp" />
     <ClCompile Include="..\Classes\step_defender_RootScene.cpp" />
@@ -289,6 +290,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_clickclick_game_Block.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_BlockTestScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_BlockView.h" />
+    <ClInclude Include="..\Classes\step_clickclick_game_Processor.h" />
     <ClInclude Include="..\Classes\step_mole_AnimationComponent.h" />
     <ClInclude Include="..\Classes\cpg_Animation_Index.h" />
     <ClInclude Include="..\Classes\cpg_Animation_Info.h" />
