--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -282,6 +282,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\graph_practice_RootScene.h" />
     <ClInclude Include="..\Classes\helper_BackToThePreviousScene.h" />
     <ClInclude Include="..\Classes\helper_SceneMover.h" />
+    <ClInclude Include="..\Classes\helper_Win32DirectoryOpen.h" />
     <ClInclude Include="..\Classes\input_practice_GamePadTestScene.h" />
     <ClInclude Include="..\Classes\input_practice_RootScene.h" />
     <ClInclude Include="..\Classes\shader_practice_BasicScene.h" />
