add scene : play scene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -178,6 +178,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_defender_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_animation_InfoContainer.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_ObjectTestScene.cpp" />
+    <ClCompile Include="..\Classes\step_mole_game_PlayScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_StageTestScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_StageView.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_TitleScene.cpp" />
@@ -302,6 +303,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_mole_animation_InfoContainer.h" />
     <ClInclude Include="..\Classes\step_mole_CircleCollisionComponentConfig.h" />
     <ClInclude Include="..\Classes\step_mole_game_ObjectTestScene.h" />
+    <ClInclude Include="..\Classes\step_mole_game_PlayScene.h" />
     <ClInclude Include="..\Classes\step_mole_game_StageConfig.h" />
     <ClInclude Include="..\Classes\step_mole_game_StageTestScene.h" />
     <ClInclude Include="..\Classes\step_mole_game_StageView.h" />
