--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -483,6 +483,9 @@
     <ClCompile Include="..\Classes\step_pathfinder_tool_TerrainToolScene.cpp">
       <Filter>src\scene\step_03_pathfinder\tool</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_mole_game_PlayScene.cpp">
+      <Filter>src\scene\step_04_mole\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -862,6 +865,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\step_pathfinder_tool_TerrainToolScene.h">
       <Filter>src\scene\step_03_pathfinder\tool</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_mole_game_PlayScene.h">
+      <Filter>src\scene\step_04_mole\game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
