--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -178,6 +178,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_defender_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_animation_InfoContainer.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_HittingNode.cpp" />
+    <ClCompile Include="..\Classes\step_mole_game_ResultScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_test_ObjectActionScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_PlayScene.cpp" />
     <ClCompile Include="..\Classes\step_mole_game_test_SpawnScene.cpp" />
@@ -306,6 +307,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_mole_animation_InfoContainer.h" />
     <ClInclude Include="..\Classes\step_mole_CircleCollisionComponentConfig.h" />
     <ClInclude Include="..\Classes\step_mole_game_HittingNode.h" />
+    <ClInclude Include="..\Classes\step_mole_game_ResultScene.h" />
     <ClInclude Include="..\Classes\step_mole_game_test_ObjectActionScene.h" />
     <ClInclude Include="..\Classes\step_mole_game_PlayScene.h" />
     <ClInclude Include="..\Classes\step_mole_game_StageConfig.h" />
