add scene : ui_research - type_effect - basic scene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -274,6 +274,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\ui_practice_RootScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_ButtonWithOnMouseOverScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_RootScene.cpp" />
+    <ClCompile Include="..\Classes\ui_research_type_effect_BasicScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -409,6 +410,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\ui_practice_RootScene.h" />
     <ClInclude Include="..\Classes\ui_research_ButtonWithOnMouseOverScene.h" />
     <ClInclude Include="..\Classes\ui_research_RootScene.h" />
+    <ClInclude Include="..\Classes\ui_research_type_effect_BasicScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
