--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -507,6 +507,9 @@
     <ClCompile Include="..\Classes\ui_research_ButtonWithOnMouseOverScene.cpp">
       <Filter>src\scene\ui_research</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ui_research_type_effect_BasicScene.cpp">
+      <Filter>src\scene\ui_research</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -906,6 +909,9 @@
       <Filter>src\scene\ui_research</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\ui_research_ButtonWithOnMouseOverScene.h">
+      <Filter>src\scene\ui_research</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ui_research_type_effect_BasicScene.h">
       <Filter>src\scene\ui_research</Filter>
     </ClInclude>
   </ItemGroup>
