--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -275,6 +275,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\ui_research_ButtonWithOnMouseOverScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_RootScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_type_effect_BasicScene.cpp" />
+    <ClCompile Include="..\Classes\ui_research_type_effect_MultiByteScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -411,6 +412,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\ui_research_ButtonWithOnMouseOverScene.h" />
     <ClInclude Include="..\Classes\ui_research_RootScene.h" />
     <ClInclude Include="..\Classes\ui_research_type_effect_BasicScene.h" />
+    <ClInclude Include="..\Classes\ui_research_type_effect_MultiByteScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
