--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -130,7 +130,7 @@
     <Filter Include="src\scene\step_06_defender\button_drag">
       <UniqueIdentifier>{da25c484-c0d6-45c1-8eb1-6b18b797d644}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\scene\step_05_rain_of_chaos\batch">
+    <Filter Include="src\scene\step_05_rain_of_chaos\batch_node">
       <UniqueIdentifier>{896d43cf-1403-4462-901a-28b5473dd318}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -514,13 +514,13 @@
       <Filter>src\scene\ui_research</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\step_rain_of_chaos_batch_node_BasicScene.cpp">
-      <Filter>src\scene\step_05_rain_of_chaos\batch</Filter>
+      <Filter>src\scene\step_05_rain_of_chaos\batch_node</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\step_rain_of_chaos_input_KeyCodeCollectScene.cpp">
       <Filter>src\scene\step_05_rain_of_chaos\input</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\step_rain_of_chaos_batch_node_QuadScene.cpp">
-      <Filter>src\scene\step_05_rain_of_chaos\batch</Filter>
+      <Filter>src\scene\step_05_rain_of_chaos\batch_node</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\step_rain_of_chaos_game_TitleScene.cpp">
       <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
@@ -930,13 +930,13 @@
       <Filter>src\scene\ui_research</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_rain_of_chaos_batch_node_BasicScene.h">
-      <Filter>src\scene\step_05_rain_of_chaos\batch</Filter>
+      <Filter>src\scene\step_05_rain_of_chaos\batch_node</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_rain_of_chaos_input_KeyCodeCollectScene.h">
       <Filter>src\scene\step_05_rain_of_chaos\input</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_rain_of_chaos_batch_node_QuadScene.h">
-      <Filter>src\scene\step_05_rain_of_chaos\batch</Filter>
+      <Filter>src\scene\step_05_rain_of_chaos\batch_node</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_rain_of_chaos_game_TitleScene.h">
       <Filter>src\scene\step_05_rain_of_chaos\game</Filter>
